force-app/main/default/objects/Exception_Log__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>This field will hold the class from which the error was logged.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the class from which the error was logged.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>