force-app/main/default/objects/Exception_Log__c/fields/DML_Type__c.field-meta.xml
<CustomField>
    <fullName>DML_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The value of the System.StatusCode enum.</inlineHelpText>
    <label>DML Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>