force-app/main/default/objects/Exception_Log__c/fields/Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Field_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The names of the field or fields that caused the error</inlineHelpText>
    <label>Field Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>