force-app/main/default/objects/Exception_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This field will hold the error message that was returned during logging of exception.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the error message that was returned during logging of exception.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>