force-app/main/default/objects/Exception_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>This field will hold the Method/function from which the exception was logged.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This field will hold the Method/function from which the exception was logged.</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>