force-app/main/default/objects/Exception_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>This field holds the Record ID for which the exception has occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the Record ID for which the exception has occurred.</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>