force-app/main/default/objects/Exception_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>This field will hold the stack trace returned from the error during logging of the exception.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field will hold the stack trace returned from the error during logging of the exception.</inlineHelpText>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>