force-app/main/default/objects/Exception_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field holds the Exception Type.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the Exception Type.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>