force-app/main/default/objects/Exception_Log__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>This field holds the Urgency/criticality level for the exception logged.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the Urgency/criticality level for the exception logged.</inlineHelpText>
    <label>Urgency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>