force-app/main/default/objects/Exception_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>This field will hold the User Id for whom this error was logged.</description>
    <inlineHelpText>This field will hold the User Id for whom this error was logged.</inlineHelpText>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>